// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when  is  1`] = `
Object {
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": "none",
  "height": null,
  "left": "$theme.sizing.scale300",
  "listStyle": "none",
  "overflowY": null,
  "position": "absolute",
  "top": null,
  "width": "calc(100% - $theme.sizing.scale600)",
}
`;

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when $isOpen is true 1`] = `
Object {
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": null,
  "height": null,
  "left": "$theme.sizing.scale300",
  "listStyle": "none",
  "overflowY": null,
  "position": "absolute",
  "top": null,
  "width": "calc(100% - $theme.sizing.scale600)",
}
`;

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when $rows is 3 1`] = `
Object {
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": "none",
  "height": "NaNpx",
  "left": "$theme.sizing.scale300",
  "listStyle": "none",
  "overflowY": "scroll",
  "position": "absolute",
  "top": null,
  "width": "calc(100% - $theme.sizing.scale600)",
}
`;

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when $type is select 1`] = `
Object {
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": "none",
  "height": null,
  "left": "$theme.sizing.scale300",
  "listStyle": "none",
  "overflowY": null,
  "position": "absolute",
  "top": "$theme.sizing.scale600",
  "width": "calc(100% - $theme.sizing.scale600)",
}
`;

exports[`Select styled components StyledDropDownItem DropDownItem: StyledDropDownItem has correct styles 1`] = `
Object {
  "lineHeight": "$theme.sizing.scale600",
}
`;

exports[`Select styled components StyledInput Input: StyledInput has correct styles 1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.mono700",
  },
  ":hover": Object {
    "cursor": "text",
  },
  "backgroundColor": "transparent",
  "borderStyle": "none",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.mono1000",
  "cursor": "pointer",
  "flexGrow": "1",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale300",
  "width": "auto",
}
`;

exports[`Select styled components StyledInputContainer InputContainer: StyledInputContainer has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono200",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": undefined,
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "flexWrap": "wrap",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "paddingBottom": "0",
  "paddingLeft": "$theme.sizing.scale300",
  "paddingRight": "$theme.sizing.scale300",
  "paddingTop": "0",
  "position": "relative",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Select styled components StyledOption : StyledOption has correct styles when  1`] = `
Object {
  ":hover": Object {
    "cursor": "pointer",
  },
  "color": null,
  "paddingLeft": "18px",
  "paddingRight": "18px",
}
`;

exports[`Select styled components StyledOption : StyledOption has correct styles when $selected 1`] = `
Object {
  ":hover": Object {
    "cursor": "pointer",
  },
  "color": "$theme.colors.primary400",
  "paddingLeft": "0px",
  "paddingRight": "0px",
}
`;

exports[`Select styled components StyledOption : StyledOption has correct styles when disabled 1`] = `
Object {
  ":hover": Object {
    "cursor": "not-allowed",
  },
  "color": "$theme.colors.mono700",
  "paddingLeft": "18px",
  "paddingRight": "18px",
}
`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is clear_all 1`] = `
Object {
  "cursor": "pointer",
  "marginLeft": "auto",
  "position": "absolute",
  "right": "$theme.sizing.scale600",
}
`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is clear_tag 1`] = `Object {}`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is loop 1`] = `
Object {
  "paddingLeft": "$theme.sizing.scale300",
}
`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is select 1`] = `
Object {
  "marginRight": "$theme.sizing.scale500",
}
`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is selected 1`] = `
Object {
  "paddingRight": "$theme.sizing.scale300",
}
`;

exports[`Select styled components StyledTag : StyledTag has correct styles when  1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.mono600",
  },
  ":hover": Object {
    "cursor": "pointer",
  },
  "backgroundColor": "transparent",
  "borderStyle": "none",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.mono600",
  "cursor": "pointer",
  "flexGrow": "1",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale400",
  "width": "auto",
}
`;

exports[`Select styled components StyledTag : StyledTag has correct styles when $multiple 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono400",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "7px",
  "borderWidth": "1px",
  "color": "$theme.colors.primary400",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "bold",
  "height": "$theme.sizing.scale800",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "margin": "5px",
  "paddingBottom": "$theme.sizing.scale0",
  "paddingLeft": "5px",
  "paddingRight": "5px",
  "paddingTop": "$theme.sizing.scale0",
}
`;
